bluec-tests/tests/invalid/literals/integers.c
int main(void) {
    int h1 = 0x;
    int h2 = 0xU;
    int h3 = 0xLL;
    int h4 = 0x0x0x;
    int h5 = 0xG;
    int h6 = 0xFG;
    int h7 = 0xgf;
    int h8 = 0x12yyyFF;
    int h9 = 0xFuu;
    int h10 = 0xFF0x111;
    int h11 = 0x1LLL;
    int h12 = 0x0uLl;
    int h13 = 0x0UlL;

    int b1 = 0b;
    int b2 = 0bU;
    int b3 = 0bLL;
    int b4 = 0b2;
    int b5 = 0b0b0b;
    int b6 = 0b1010abc10101;
    int b7 = 0b11110002;
    int b8 = 0babc;
    int b9 = 0b1110b111;
    int b10 = 0b1110xFF;
    int b11 = 0b111uu;
    int b12 = 0b111LLL;

    int o1 = 012345678;
    int o2 = 080000000;
    int o3 = 01234567bad0101;
    int o4 = 08;
    int o5 = 080xFF;
    int o6 = 010b11;
    int o7 = 01uu;
    int o8 = 01LLL;

    int d1 = 123abc456;
    int d2 = 123abc;
    int d3 = abc;
    int d4 = abc123;
    int d5 = 123LLLL;
    int d6 = 0uu;
    int d7 = 0uuu;
    int d8 = 1uLl;
    int d9 = 1lL;
    int d10 = 1LLLLLLLUUUUU;

    return 0;
}
